--- a/hello.html
+++ b/hello.html
@@ -2,9 +2,9 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Hello world!</title>
+    <title>Index</title>
   </head>
   <body>
-
+    Hello!
   </body>
 </html>
